# tessera

./: .gitignore  ABOUT.md  AGENTS.md  CLAUDE.md  Cargo.toml  MANIFESTO.md  README.md  SCHEMA.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  viewer.html
.cargo/: config.toml
crates/analyzer/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  render.rs  term.rs
crates/cli/src/commands/: index.rs  mod.rs  version.rs
crates/cli/tests/: index.rs
crates/context/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml  package.json  tauri.conf.json  vite.config.ts
crates/desktop/capabilities/: default.json
crates/desktop/src/: App.tsx  main.rs  styles.css
crates/kernel/: Cargo.toml
crates/scip/: Cargo.toml
crates/scip/src/: detect.rs  indexer.rs  language.rs  lib.rs  mirror.rs  orchestrate.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: fixtures.md  test-repos.md
docs/rfcs/: 0001-project-graph-schema.md  0002-tessera-show.md  0003-tessera-index-sqlite-mirror.md
