[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["forks"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
tessera-scip = { path = "crates/scip" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
anstyle = "1.0"
anstream = "0.6"

