[package]
name = "tessera-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
tessera-scip = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
anstyle = { workspace = true }
anstream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
