[package]
name = "tessera-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
anstyle = { workspace = true }
anstream = { workspace = true }
tessera-core = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
